--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ma communaute</title>
-    <script type="module" crossorigin src="/assets/index-DUnKBMV4.js"></script>
+    <script type="module" crossorigin src="/assets/index-C2iXY8ra.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/index-DKryal7W.css">
   </head>
 
